--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                       </ul>
                 </td>
                 <td style="width: 80%;">
-                    <img src="C:\Users\radit\Pictures\20210712_093539.jpg.jpg" style="width:200 px;height:250px;">
+                    <img src="20210712_093539.jpg.jpg" style="width:200 px;height:250px;">
                 </td>
             </tr>
             <tr>
